# face-verification-app

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  run_api.sh
.github/workflows/: build.yml  lint-and-test.yml  release.yml
api/: app.py  models.py  routes.py
tests/: conftest.py
tests/api/: conftest.py  test_routes.py
tests/verification_modules/: test_detectors.py  test_utils.py
verification_modules/: __main__.py  utils.py
verification_modules/detectors/: __init__.py  base.py  opencv.py
verification_modules/models/: __init__.py  base.py  vgg_face.py
